--- a/module-7/home.html
+++ b/module-7/home.html
@@ -101,6 +101,26 @@
 			<div class="detail-button-paris">Details</div>
 			</div>
 		</div>
+		<div class="tabs">
+			<div class="tabs-details">
+				<div class="tabs-array">
+					<div class="tab1">LAST MINUTE</div>
+					<div class="tab">HOT DETAILS</div>
+					<div class="tab">ALL_INCLUSIVE</div>
+				</div>
+				<div class="tab-info">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum tempore dolor inventore at omnis voluptas pariatur doloribus cumque fuga, illum quaerat molestias impedit hic! Vero ipsum, mollitia voluptatem laudantium nostrum saepe. Distinctio dicta, alias eos optio tenetur deserunt, facilis unde veniam, impedit a delectus quas quod laborum quam nemo hic aut. Quibusdam a reiciendis voluptatibus esse, ut, quisquam vero consequatur pariatur dolorem, repudiandae quasi? Odio quaerat, doloribus voluptatibus quasi! Numquam culpa, vero ratione optio, quasi aperiam commodi quibusdam veritatis eius ea ducimus alias aliquam. Vero tempora voluptas aut, consequatur neque numquam, doloremque, dolores labore voluptatum voluptatibus iste delectus quaerat! Ratione.
+				</div>
+			</div>
+			<div class="newsletter">
+				<div class="newsletter-name">
+					sfe
+				</div>
+				<div class="newsletter-info">
+					sfes
+				</div>
+			</div>
+		</div>
 	</main>
 	<footer>	
 		<ul class="footer">
