--- a/module-7/home.html
+++ b/module-7/home.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-
 
 <body>
 	<header>
@@ -109,15 +107,46 @@
 					<div class="tab">ALL_INCLUSIVE</div>
 				</div>
 				<div class="tab-info">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum tempore dolor inventore at omnis voluptas pariatur doloribus cumque fuga, illum quaerat molestias impedit hic! Vero ipsum, mollitia voluptatem laudantium nostrum saepe. Distinctio dicta, alias eos optio tenetur deserunt, facilis unde veniam, impedit a delectus quas quod laborum quam nemo hic aut. Quibusdam a reiciendis voluptatibus esse, ut, quisquam vero consequatur pariatur dolorem, repudiandae quasi? Odio quaerat, doloribus voluptatibus quasi! Numquam culpa, vero ratione optio, quasi aperiam commodi quibusdam veritatis eius ea ducimus alias aliquam. Vero tempora voluptas aut, consequatur neque numquam, doloremque, dolores labore voluptatum voluptatibus iste delectus quaerat! Ratione.
+					<div class="tab-up">
+						<img class="float" src="img/tabs/tab1.png" alt="New Year">
+						<h4>Lorem ipsum dolor sit.</h4>
+						<p class="black-text"><span class="red-text">Click here</span>or more info about this free website template created by TemplateMonster.com </p>
+						<br>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo.
+						</p>
+						<div class="blog-detail-button">	
+								<a href="#">Details</a>
+						</div>
+					</div>
+					<div class="tab-up">
+						<img class="float" src="img/tabs/tab2.png" alt="New Year">
+						<h4>Lorem ipsum dolor sit.</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo exercitationem consectetur, placeat.
+						</p>
+						<div class="blog-detail-button">	
+								<a href="#">Details</a>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="newsletter">
 				<div class="newsletter-name">
-					sfe
+					NEWSLETTER	
 				</div>
 				<div class="newsletter-info">
-					sfes
+					<h4>Sign up to receive our newsletters</h4>
+					<input class="email" type="text" name="name" placeholder="email addres">
+					<div class="home-ul">
+						<ul>
+							<li>Lorem ipsum dolor.</li>
+							<li>Voluptate, explicabo!</li>
+							<li>Officiis, similique.</li>
+							<li>Assumenda, autem!</li>
+							<li>Iusto, similique.</li>
+							<li>Enim, vitae, nulla?</li>
+							<li>Assumenda, autem!</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -150,10 +179,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<li><a href="#"><img src="img/social-icons/tw.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/fb.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/gp.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/ln.png" alt=""></a></li>
+			<a href="#"><li class="bg-fb bg-same"></li></a>
+			<a href="#"><li class="bg-gp bg-same"></li></a>
+			<a href="#"><li class="bg-ln bg-same"></li></a>
+			<a href="#"><li class="bg-tw bg-same"></li></a>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
