--- a/module-6/gallery.html
+++ b/module-6/gallery.html
@@ -3,11 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 
@@ -95,10 +94,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<li><a href="#"><img src="img/social-icons/tw.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/fb.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/gp.png" alt=""></a></li>
-			<li><a href="#"><img src="img/social-icons/ln.png" alt=""></a></li>
+			<a href="#"><li class="bg-fb bg-same"></li></a>
+			<a href="#"><li class="bg-gp bg-same"></li></a>
+			<a href="#"><li class="bg-ln bg-same"></li></a>
+			<a href="#"><li class="bg-tw bg-same"></li></a>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
