--- a/module-8/index.html
+++ b/module-8/index.html
@@ -1,29 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="UTF-8">
-	<title>Module-8</title>
+	<title>Document</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
-<body class="wrapper">
-<header>
-czscs
-</header>
-<main>
-	<div class="first">
-		ead
-	</div>
-	<div class="second">
-	aedse
-	</div>
-	<div class="third">
-		cdc
-	</div>
-</main>	
-<footer>
-	dzcz
 
-</footer>
+<body>
+	<header class="header">
+		<nav>	
+			<ul class="menu">
+				<li class="menu__item">
+					<a href="#">HOME</a>
+				</li>
+				<li class="menu__item">
+					<a href="about.html">ABOUT</a>
+					<ul class="submenu">
+			          <li class="submenu__item">
+			            <a class="first-submenu" href="#">AGENCY</a>
+			          </li>
+			          <li class="submenu__item">
+			            <a href="#">NEWS</a>
+			          </li>
+			          <li class="submenu__item">
+			            <a href="#">TEAM</a>
+			          </li>
+			        </ul>
+				</li>
+				<li class="menu__item">
+					<a href="gallery.html">GALLERY</a>
+				</li>
+				<li class="logo_item">
+					<a href="#" class="logo">JOURNEY</a>
+				</li>
+				<li class="menu__item">
+					<a href="#">TOURS</a>
+				</li>
+				<li class="menu__item">
+					<a href="blog.html">BLOG</a>
+				</li>
+				<li class="menu__item">
+					<a href="#">CONTACTS</a>
+				</li>
+			</ul>
+		</nav>	
+	</header>
+	<main class="main">
+		dsd
+	</main>
+
+	<footer>	
+		<div class="footer-container">
+			<ul class="footer">
+				<li>
+					<a href="#">FAQS PAGE</a>
+				</li>
+				<li>
+					<a href="#">USEFUL LINKS</a>
+				</li>
+				<li>
+					<a href="#">INSURANCE</a>
+				</li>
+				<li>
+					<a href="#">PEOPLE SAY</a>
+				</li>	
+				<li>
+					<a href="#">PARTNERS</a>
+				</li>
+				<li>
+					<a href="#">FAMILY TRAVEL</a>
+				</li>
+				<li>
+					CONTACT US:
+				</li>
+				<li class="telephone">
+					+1-800-234-5678
+				</li>
+				<li class="footer-mail">
+					info@demolink.org
+				</li>
+			</ul>
+		</div>
+
+	</footer>
+	<div class="social-footer">
+		<ul class="icons">
+			<a href="#"><li class="bg-fb bg-same"></li></a>
+			<a href="#"><li class="bg-gp bg-same"></li></a>
+			<a href="#"><li class="bg-ln bg-same"></li></a>
+			<a href="#"><li class="bg-tw bg-same"></li></a>
+		</ul>
+		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
+		</span>
+	</div>
+
 </body>
 </html>
