--- a/module-8/index.html
+++ b/module-8/index.html
@@ -50,7 +50,23 @@
 		</nav>	
 	</header>
 	<main class="main">
-		dsd
+		<section class="content">
+			<h2>OUR GALERRY</h2>
+			<div class="gallery">
+				<div class="image"><img src="img/gallery/img1.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img2.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img3.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img4.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img5.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img6.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img7.jpg" alt=""></div>
+				<div class="image"><img src="img/gallery/img8.jpg" alt=""></div>
+				<div class="last-image image"><img src="img/gallery/img9.jpg" alt=""></div>
+			</div>
+			<div class="strela">
+				<a href="#" title="Вернуться к началу" class="topbutton"></a>
+			</div>
+		</section>
 	</main>
 
 	<footer>	
@@ -89,10 +105,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<a href="#"><li class="bg-fb bg-same"></li></a>
-			<a href="#"><li class="bg-gp bg-same"></li></a>
-			<a href="#"><li class="bg-ln bg-same"></li></a>
-			<a href="#"><li class="bg-tw bg-same"></li></a>
+			<li class="bg-fb bg-same"><a href="#"></a></li>
+			<li class="bg-gp bg-same"><a href="#"></a></li>
+			<li class="bg-ln bg-same"><a href="#"></a></li>
+			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
