--- a/module-5/index.html
+++ b/module-5/index.html
@@ -20,10 +20,10 @@
 		            <a class="first-submenu" href="#">AGENCY</a>
 		          </li>
 		          <li class="submenu__item">
-		            <a href="#"">NEWS</a>
+		            <a href="#">NEWS</a>
 		          </li>
 		          <li class="submenu__item">
-		            <a href="#"">TEAM</a>
+		            <a href="#">TEAM</a>
 		          </li>
 		        </ul>
 			</li>
