--- a/module-6/about.html
+++ b/module-6/about.html
@@ -125,10 +125,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<a href="#"><li class="bg-fb bg-same"></li></a>
-			<a href="#"><li class="bg-gp bg-same"></li></a>
-			<a href="#"><li class="bg-ln bg-same"></li></a>
-			<a href="#"><li class="bg-tw bg-same"></li></a>
+			<li class="bg-fb bg-same"><a href="#"></a></li>
+			<li class="bg-gp bg-same"><a href="#"></a></li>
+			<li class="bg-ln bg-same"><a href="#"></a></li>
+			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
