--- a/module-6/gallery.html
+++ b/module-6/gallery.html
@@ -51,6 +51,7 @@
 	</header>
 	<main class="main">
 		<section>
+			<h2 class="h2-gallery">OUR GALLERY</h2>
 			<div class="gallery">
 				<div class="image"><img src="img/gallery/img1.jpg" alt=""></div>
 				<div class="image"><img src="img/gallery/img2.jpg" alt=""></div>
@@ -94,10 +95,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<a href="#"><li class="bg-fb bg-same"></li></a>
-			<a href="#"><li class="bg-gp bg-same"></li></a>
-			<a href="#"><li class="bg-ln bg-same"></li></a>
-			<a href="#"><li class="bg-tw bg-same"></li></a>
+			<li class="bg-fb bg-same"><a href="#"></a></li>
+			<li class="bg-gp bg-same"><a href="#"></a></li>
+			<li class="bg-ln bg-same"><a href="#"></a></li>
+			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
