--- a/module-7/contacts.html
+++ b/module-7/contacts.html
@@ -54,54 +54,54 @@
 			<h2>STAY IN TOUCH</h2>
 			<h2>CONTACT US</h2>
 		</div>
-		<section class="contact-section">
-			<iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2331.091722267942!2d30.522996115575555!3d50.42110227296936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1509038175917" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-		<div class="map-text">	
-			<span>8901 Marmora Road,</span><br>
-			<span>Glasgow, D04 89GR.</span>
-			<br>
-			<br>
-			<div class="freephone">
-				<span>Freephone:</span><span>+1 800 559 6580</span>
-			</div>	
-			<div class="freephone">
-				<span>Telephone:</span><span>+1 800 603 6035</span>
-			</div>	
-			<div class="freephone">
-				<span>FAX:</span><span>+1 800 889 9898</span>
-			</div>	
-			<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
-			<br>
-			<br>
-			<br>
-			<span>9870 St Vincent Place,</span><br>
-			<span>Glasgow, DC 45 Fr 45.</span>
-			<br>
-			<br>
-			<div class="freephone">
-				<span>Freephone:</span><span>+1 800 559 6580</span>
-			</div>	
-			<div class="freephone">
-				<span>Telephone:</span><span>+1 800 603 6035</span>
-			</div>	
-			<div class="freephone">
-				<span>FAX:</span><span>+1 800 889 9898</span>
-			</div>	
-			<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
+		<div class="contact-section">
+			<iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2331.091722267942!2d30.522996115575555!3d50.42110227296936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1509038175917" width="400" height="400" style="border:0" allowfullscreen></iframe>
+			<div class="map-text">	
+				<span>8901 Marmora Road,</span><br>
+				<span>Glasgow, D04 89GR.</span>
+				<br>
+				<br>
+				<div class="freephone">
+					<span>Freephone:</span><span>+1 800 559 6580</span>
+				</div>	
+				<div class="freephone">
+					<span>Telephone:</span><span>+1 800 603 6035</span>
+				</div>	
+				<div class="freephone">
+					<span>FAX:</span><span>+1 800 889 9898</span>
+				</div>	
+				<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
+				<br>
+				<br>
+				<br>
+				<span>9870 St Vincent Place,</span><br>
+				<span>Glasgow, DC 45 Fr 45.</span>
+				<br>
+				<br>
+				<div class="freephone">
+					<span>Freephone:</span><span>+1 800 559 6580</span>
+				</div>	
+				<div class="freephone">
+					<span>Telephone:</span><span>+1 800 603 6035</span>
+				</div>	
+				<div class="freephone">
+					<span>FAX:</span><span>+1 800 889 9898</span>
+				</div>	
+				<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
+			</div>
+			<div class="form">
+				<form action="#" method="get" class="form-method">
+	        			<input type="text" name="name" value="NAME">
+	        			<input type="text" value="EMAIL" name="surname">
+	        			<input type="text" value="SUBJECT" name="age">
+	      				<textarea id="textarea" cols="10" rows="15" placeholder="MESSAGE"></textarea>
+	    				<div class="buttons">
+	    					<input type = "submit" value = "Clear">
+	    					<input type = "submit" value = "Send">
+	    				</div>
+	    		</form>
+			</div>
 		</div>
-		<div class="form">
-			<form action="#" method="get" class="form-method">
-        			<input type="text" name="name" value="NAME">
-        			<input type="text" value="EMAIL" name="surname">
-        			<input type="text" value="SUBJECT" name="age">
-      				<textarea name="" id="" cols="10" rows="15" placeholder="MESSAGE"></textarea>
-    				<div class="buttons">
-    					<input type = "submit" value = "Clear">
-    					<input type = "submit" value = "Send">
-    				</div>
-    		</form>
-		</div>
-		</section>
 	</main>
 	<footer>	
 		<ul class="footer">
@@ -131,10 +131,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<a href="#"><li class="bg-fb bg-same"></li></a>
-			<a href="#"><li class="bg-gp bg-same"></li></a>
-			<a href="#"><li class="bg-ln bg-same"></li></a>
-			<a href="#"><li class="bg-tw bg-same"></li></a>
+			<li class="bg-fb bg-same"><a href="#"></a></li>
+			<li class="bg-gp bg-same"><a href="#"></a></li>
+			<li class="bg-ln bg-same"><a href="#"></a></li>
+			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
