--- a/module-7/tours.html
+++ b/module-7/tours.html
@@ -55,78 +55,90 @@
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour1.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 			    <div class="tour-button">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour2.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 				<div class="tour-button">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour3.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 				<div class="tour-button">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour4.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 				<div class="tour-button">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour5.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 				<div class="tour-button">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
 		<div class="tour">
 			<div class="tour-image"><img src="img/tours/tour6.jpg" alt=""></div>
 			<div class="tour-info">
-				<span main-tour-text>Gellentesque imperdiet</span>
+				<span class="main-tour-text">Gellentesque imperdiet</span>
 				<p>Lorem ipsum dolor sit amet</p>
 				<span class="price">From $ 399</span>
 				<p>Suspendisse jew wligulawe</p>
 				<span class="price">From $ 299</span>
 				<div class="tour-button ">
-    				<a href="#"><input type = "submit" value = "Details"></a>
+					<form method="get" action="/page2">
+    					<input type = "submit" value = "Details">
+    				</form>
     			</div>	
 			</div>
 		</div>
@@ -141,7 +153,9 @@
 			</select>
 		</div>
 		<div class="tour-button">
-    		<a href="#"><input type = "submit" value = "Search"></a>
+			<form method="get" action="/page2">
+    			<input type = "submit" value = "Search">
+    		</form>
     	</div>		
    		<h2 class="tours-h2-search">Search</h2>
 		<p class="blue-p">All Tour Operators</p>
@@ -174,8 +188,10 @@
 			</select>
 		</div>
 		<div class="tour-button">
-    		<a href="#"><input type = "submit" value = "Search"></a>
-    	</div>	
+			<form method="get" action="/page2">
+    			<input type = "submit" value = "Search">
+    		</form>
+       	</div>	
 	</aside>
 	</main>
 	<footer>	
@@ -206,10 +222,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<a href="#"><li class="bg-fb bg-same"></li></a>
-			<a href="#"><li class="bg-gp bg-same"></li></a>
-			<a href="#"><li class="bg-ln bg-same"></li></a>
-			<a href="#"><li class="bg-tw bg-same"></li></a>
+			<li class="bg-fb bg-same"><a href="#"></a></li>
+			<li class="bg-gp bg-same"><a href="#"></a></li>
+			<li class="bg-ln bg-same"><a href="#"></a></li>
+			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
