--- a/module-7/contacts.html
+++ b/module-7/contacts.html
@@ -106,24 +106,24 @@
 	<footer>	
 		<ul class="footer">
 			<li>
-				<a href="#">FAQS Page</a>
+				<a href="#">FAQS PAGE</a>
 				</li>
 			<li>
-				<a href="#">Useful</a>
+				<a href="#">USEFUL LINKS</a>
 				</li>
 			<li>
-				<a href="#">Insurance</a>
+				<a href="#">INSURANCE</a>
 				</li>
-			<li>Contact Us:
+			<li>CONTACT US:
 			</li>
 			<li>
-				<a href="#">People Say</a>
+				<a href="#">PEOPLE SAY</a>
 				</li>
 			<li>
-				<a href="#">links</a>
+				<a href="#">PARTNERS</a>
 				</li>
 			<li>
-				<a href="#">Family</a>
+				<a href="#">FAMILY TRAVEL</a>
 				</li>
 			<li>TEL: 1-800-234-5678 info@demolink.org
 			</li>
