--- a/module-6/about.html
+++ b/module-6/about.html
@@ -2,13 +2,12 @@
 <html lang="zxx">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>About</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-
 
 <body>
 	<header>
