--- a/module-7/home.html
+++ b/module-7/home.html
@@ -56,10 +56,8 @@
         	<img id="image4" src="img/slider/4.jpg" alt="slide4">
     	</div>
     	<div class="slider">
-        	<a href="#image1">1</a>
-        	<a href="#image2">2</a>
-        	<a href="#image3">3</a>
-        	<a href="#image4">4</a>
+			<a href="#" class="slider-move-left"></a>
+			<a href="#" class="slider-move-right"></a>
 	        <div class="slider-fon1"></div>
 	    	<div class="slider-text1">THERE ARE PLENTY OF PLACES</div>
 	    	<div class="slider-fon2"></div>
