--- a/module-6/gallery.html
+++ b/module-6/gallery.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Gallery</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
