--- a/module-7/home.html
+++ b/module-7/home.html
@@ -108,8 +108,7 @@
 					<div class="tab-up">
 						<img class="float" src="img/tabs/tab1.png" alt="New Year">
 						<h4>Lorem ipsum dolor sit.</h4>
-						<p class="black-text"><span class="red-text">Click here</span>or more info about this free website template created by TemplateMonster.com </p>
-						<br>
+						<p class="black-text margin-buttom-small"><span class="red-text">Click here</span>or more info about this free website template created by TemplateMonster.com </p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo.
 						</p>
 						<div class="blog-detail-button">	
