--- a/module-7/contacts.html
+++ b/module-7/contacts.html
@@ -57,10 +57,8 @@
 		<div class="contact-section">
 			<iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2331.091722267942!2d30.522996115575555!3d50.42110227296936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1509038175917" width="400" height="400" style="border:0" allowfullscreen></iframe>
 			<div class="map-text">	
-				<span>8901 Marmora Road,</span><br>
-				<span>Glasgow, D04 89GR.</span>
-				<br>
-				<br>
+				<p>8901 Marmora Road,</p>
+				<p class="padding-buttom">Glasgow, D04 89GR.</p>
 				<div class="freephone">
 					<span>Freephone:</span><span>+1 800 559 6580</span>
 				</div>	
@@ -70,14 +68,10 @@
 				<div class="freephone">
 					<span>FAX:</span><span>+1 800 889 9898</span>
 				</div>	
-				<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
-				<br>
-				<br>
-				<br>
-				<span>9870 St Vincent Place,</span><br>
-				<span>Glasgow, DC 45 Fr 45.</span>
-				<br>
-				<br>
+				<p class="red-text padding-buttom">E-mail:<span>mail@demolink.org</span></p>
+
+				<p>9870 St Vincent Place,</p>
+				<p class="red-text padding-buttom">Glasgow, DC 45 Fr 45.</p>
 				<div class="freephone">
 					<span>Freephone:</span><span>+1 800 559 6580</span>
 				</div>	
