--- a/module-9/gallery.html
+++ b/module-9/gallery.html
@@ -15,7 +15,7 @@
 		<nav>
 		<div class="container">
 				<div class="row justify-content-center">
-					<ul class="menu col-7 col-md-6 col-lg-12 col-xl-10">
+					<ul class="menu col-7 col-md-6 col-lg-10">
 						<li class="menu__item">
 							<a href="#">HOME</a>
 						</li>
@@ -57,16 +57,16 @@
 	<main class="main container">
 		<section class="row">
 			<h2 class="col-12 justify-content-start">OUR GALERRY</h2>
-			<div class="gallery col-12 justify-content-around">
-				<div class="image"><img src="img/gallery/img1.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img2.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img3.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img4.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img5.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img6.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img7.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img8.jpg" alt=""></div>
-				<div class="last-image image"><img src="img/gallery/img9.jpg" alt=""></div>
+			<div class="gallery row">	
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img1.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img2.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img3.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img4.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img5.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img6.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img7.jpg" alt=""></div>
+				<div class="image col-12 col-md-6 col-lg-4"><img src="img/gallery/img8.jpg" alt=""></div>
+				<div class="last-image image col-12 col-md-6 col-lg-4"><img src="img/gallery/img9.jpg" alt=""></div>
 			</div>
 			<div class="strela">
 				<a href="#" title="Вернуться к началу" class="topbutton"></a>
@@ -106,16 +106,15 @@
 				</li>
 			</ul>
 		</div>
-
 	</footer>
-	<div class="social-footer">
-		<ul class="icons">
+	<div class="social-footer container align-content-center">
+		<ul class="icons row justify-content-center">
 			<li class="bg-fb bg-same"><a href="#"></a></li>
 			<li class="bg-gp bg-same"><a href="#"></a></li>
 			<li class="bg-ln bg-same"><a href="#"></a></li>
 			<li class="bg-tw bg-same"><a href="#"></a></li>
 		</ul>
-		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
+		<span class="social-text row justify-content-center">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
 	</div>
 
