--- a/module-9/tours.html
+++ b/module-9/tours.html
@@ -160,7 +160,7 @@
 						<option>Browse by Tour Operator</option>
 					</select>
 				</div>
-				<div class="tour-button">
+				<div class="browse-tour-button">
 					<form method="get" action="/page2">
 		    			<input type = "submit" value = "Search">
 		    		</form>
@@ -207,7 +207,7 @@
 					</div>
 				</div>	
 	       	</div>
-	       	<div class="tour-button align-content-center">
+	       	<div class="search-tour-button align-content-center">
 				<form method="get" action="/page2">
 			   		<input type = "submit" value = "Search">
 			   	</form>
